building patch, deletion and ticket creation